# cmake-glad2

./: CMakeLists.txt  README.md
include/glad/: gl.h  gles2.h
